--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,12 @@
   body {
     margin: 0;
     padding: 0;
-   
-    background-color: #e0f7fa; 
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+    box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
+
+
+
 
 
 
