--- a/src/NavBar/NavBar.css
+++ b/src/NavBar/NavBar.css
@@ -2,7 +2,9 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin: 0 2rem;
+    padding: 0 2rem;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    margin-bottom: 2rem;
 
     ul {
         list-style: none;
